--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         <li>Contact number : 7042915187 </li>
     </ol>
     <hr>
-    <form  action="mailto:tonystark23022003@gmail.com" method="post" enctype="text/plain">
+    <form  action="mailto:prathamkhandelwal2003@gmail.com" method="post" enctype="text/plain">
         <label>Your Name : </label>
         <input type="text" name="Your Name " value=""><br>
         <label>Your Email :</label>
